--- a/index.html
+++ b/index.html
@@ -7,32 +7,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning Vue</title>
 
-  <style>
-    div#id {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  </style>
   <script src="https://unpkg.com/vue@3.0.2"></script>
 </head>
 
 <body>
-  <div id="app">
+  <div id="app" style="display: flex; flex-direction: column; justify-content: center;align-items: center;">
     <div v-if="showBooks">
       <h2>{{ title }} - {{ author }} - {{ age }}</h2>
     </div>
 
-    <button @click="age++">Increase age</button>
-    <button @click="age--">Decrease age</button>
-    <button @click="changeTitle('new title')">new title</button>
+    <div>
+      <button @click="age++">Increase age</button>
+      <button @click="age--">Decrease age</button>
+      <button @click="changeTitle('new title')">new title</button>
 
-    <button @click="toggleShowBooks">
-      <span v-if="showBooks">Hide Books</span>
-      <span v-else>Show Books</span>
-    </button>
+    </div>
 
-    <div v-show="showBooks">currently showing books...</div>
+    <div>
+      <button @click="toggleShowBooks">
+        <span v-if="showBooks">Hide Books</span>
+        <span v-else>Show Books</span>
+      </button>
+
+      <span v-show="showBooks">currently showing books...</span>
+    </div>
+
   </div>
 
   <script src="app.js"></script>
