--- a/index.html
+++ b/index.html
@@ -8,29 +8,45 @@
   <title>Learning Vue</title>
 
   <script src="https://unpkg.com/vue@3.0.2"></script>
+  <style>
+    #app {
+      text-align: center;
+    }
+
+    .box {
+      display: inline-block;
+      background: #ddd;
+      width: 400px;
+      text-align: center;
+      padding: 100px 0;
+      margin: 20px;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="app" style="display: flex; flex-direction: column; justify-content: center;align-items: center;">
-    <div v-if="showBooks">
-      <h2>{{ title }} - {{ author }} - {{ age }}</h2>
+  <div id="app">
+    <div class="show-books">
+      <div v-if="showBooks">
+        <h2>{{ title }} - {{ author }} - {{ age }}</h2>
+      </div>
+
+      <div>
+        <button @click="toggleShowBooks">
+          <span v-if="showBooks">Hide Books</span>
+          <span v-else>Show Books</span>
+        </button>
+
+        <span v-show="showBooks" style="margin-left: 5px;">currently showing books...</span>
+      </div>
+
     </div>
 
-    <div>
-      <button @click="age++">Increase age</button>
-      <button @click="age--">Decrease age</button>
-      <button @click="changeTitle('new title')">new title</button>
-
-    </div>
-
-    <div>
-      <button @click="toggleShowBooks">
-        <span v-if="showBooks">Hide Books</span>
-        <span v-else>Show Books</span>
-      </button>
-
-      <span v-show="showBooks">currently showing books...</span>
-    </div>
+    <br>
+    <div class="box" @mouseover="handleEvent($event, 5)">mouseover (enter)</div>
+    <div class="box" @mouseleave="handleEvent">mouseleave</div>
+    <div class="box" @dblclick="handleEvent">double click</div>
+    <div class="box" @mousemove="handleMousemove">Position - {{ x }} {{ y }}</div>
 
   </div>
 
