--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <span v-else>Show Books</span>
         </button>
 
-        <span v-show="showBooks" style="margin-left: 5px;">currently showing books...</span>
+        <span v-show="showBooks" style="margin-left: 5px;">currently showing favourite books...</span>
       </div>
 
     </div>
